# DI-commission-etudes

./: .gitignore  Makefile  Scolarite  sco-binaries.opam
admissions/: collect_admissions.ml  collect_admissions.mli  dune
cloud_interaction/: cloud_interaction.ml  cloud_interaction.mli  dune
commissions/: commissions.ml  commissions.mli  dune
compensations/: collect_compensations.ml  collect_compensations.mli  dune
copy/: copy.ml  copy.mli  dune
cost/: collect_cost.ml  collect_cost.mli  dune
cours/: collect_course_entries.ml  collect_course_entries.mli  collect_course_exceptions.ml  collect_course_exceptions.mli  collect_course_name_translation.ml  collect_course_name_translation.mli  collect_sorted_courses.ml  collect_sorted_courses.mli  dune
cours_a_ajouter/: collect_cours_a_ajouter.ml  collect_cours_a_ajouter.mli  dune
data_stuctures/: automata.ml  automata.mli  dune  notes.ml  notes.mli  univ.ml  univ.mli  valide.ml  valide.mli
decisions/: collect_decisions.ml  collect_decisions.mli  dune
dens/: activite.ml  activite.mli  dens.ml  dens.mli  dune  sad.ml  sad.mli
dispenses/: collect_dispenses.ml  collect_dispenses.mli  dune
file_retriever/: dune  file_retriever.ml  file_retriever.mli
get_gps_files/: dune  file_retriever.ml  file_retriever.mli  get_gps_files.ml  get_gps_files.mli
gps/: dune  file_retriever.ml  get_gps_files.ml  get_gps_files.mli  suggest.ml  suggest.mli  transcripts.ml  transcripts.mli
inscriptions/: collect_inscriptions.ml  collect_inscriptions.mli  dune
keywords_handler/: dune  keywords_handler.ml  keywords_handler.mli
known_issues/: ambiguous_internship_descriptions.ml  ambiguous_internship_descriptions.mli  dune  gen.ml  gen.mli  grades.ml  grades.mli  internship_descriptions.ml  mentors.ml  missing_ects_attributions.ml  missing_ects_attributions.mli  missing_grades.ml  missing_grades.mli  missing_internship_descriptions.ml  missing_internship_descriptions.mli  missing_mentors.ml
latex_engine/: dune  latex_engine.ml  latex_engine.mli
main/: dune  scolarite.ml  scolarite.mli
mentoring/: collect_mentoring.ml  collect_mentoring.mli  dune
missing_grades/: dune  missing_grades.ml  missing_grades.mli
notes_a_modifier/: collect_notes_a_modifier.ml  collect_notes_a_modifier.mli  dune
pegasus/: collect_pegasus_administrative_status.ml  collect_pegasus_administrative_status.mli  collect_pegasus_courses.ml  collect_pegasus_courses.mli  collect_pegasus_notes.ml  collect_pegasus_notes.mli  collect_pegasus_pedagogical_registrations.ml  collect_pegasus_pedagogical_registrations.mli  collect_pegasus_stages.ml  collect_pegasus_stages.mli  collect_pegsus_administrative_status.ml  dune
photos/: dune  photos.ml  photos.mli
programs/: collect_programs.ml  collect_programs.mli  dune
reglements_pedagogiques/: dune  reglements_pedagogiques_tools.ml  reglements_pedagogiques_tools.mli
remanent_state/: admissions.ml  admissions.mli  compensations.ml  compensations.mli  cours_a_ajouter.ml  cours_a_ajouter.mli  cours_a_trier.ml  cours_a_trier.mli  course_exceptions.ml  course_exceptions.mli  course_name_translation.ml  course_name_translation.mli  cursus.ml  cursus.mli  cursus_exception.ml  cursus_exception.mli  decisions.ml  decisions.mli  dens_candidates.ml  dens_candidates.mli  departments.ml  departments.mli  dispense.ml  dispenses.ml  dispenses.mli  dune  exception.ml  exception.mli  exception_without_parameter.ml  exception_without_parameter.mli  inscriptions.ml  inscriptions.mli  loggers.ml  loggers.mli  major_candidates.ml  major_candidates.mli  mentoring.ml  mentoring.mli  minor_candidates.ml  minor_candidates.mli  (+34 more)
repartition/: collect_repartition.ml  collect_repartition.mli  dune
reports/: course_translations.ml  course_translations.mli  courses_to_be_sorted.ml  courses_to_be_sorted.mli  dens_candidates_suggestion.ml  dens_candidates_suggestion.mli  dens_report.ml  dens_report.mli  diploma_report.ml  diploma_report.mli  dune  gen.ml  gen.mli  grades.ml  (+17 more)
(+38 files in other folders)
