(executable
  (name Scolarite)
  (libraries lwt.unix sco_get_inscriptions sco_get_gps_files sco_get_notes_a_modifier sco_get_cours_a_ajouter sco_get_scholarships sco_get_compensations sco_get_mentoring sco_get_programs sco_get_courses sco_get_decisions sco_get_admissions sco_get_dispenses sco_reports sco_remanent_state sco_tools sco_cloud_interaction sco_latex_engine sco_commissions sco_copy sco_dens sco_get_internships)
  (public_name sco_binaries)
(flags (:standard -w @a
  -open Sco_get_inscriptions
  -open Sco_get_notes_a_modifier
  -open Sco_get_cours_a_ajouter
  -open Sco_get_gps_files
  -open Sco_get_scholarships
  -open Sco_get_compensations
  -open Sco_get_mentoring
  -open Sco_get_courses
  -open Sco_get_internships
  -open Sco_reports
  -open Sco_remanent_state
  -open Sco_cloud_interaction
  -open Sco_tools
  -open Sco_get_programs
  -open Sco_get_decisions
  -open Sco_get_admissions
  -open Sco_get_dispenses
  -open Sco_latex_engine
  -open Sco_copy
  -open Sco_commissions
  -open Sco_dens)))
