(library
  (name sco_pegasus)
  (libraries csv sco_latex_engine sco_remanent_state sco_tools sco_keywords_handler sco_scan_files sco_datastructures sco_copy)
  (flags (:standard -w @a
    -open Sco_latex_engine
    -open Sco_remanent_state
    -open Sco_tools
    -open Sco_keywords_handler
    -open Sco_scan_files
    -open Sco_datastructures
    -open Sco_copy
)))
